# CS4076

./: CMakeLists.txt  accountsF
QTprojUI/UI/: CMakeLists.txt  account.cpp  account.h  accountwindow.cpp  accountwindow.h  accountwindow.ui  collection.h  homepage.cpp  homepage.h  homepage.ui  homewindow.cpp  homewindow.h  homewindow.ui  main.cpp  options.h  processes.cpp  processes.h  recipie.cpp  recipie.h  recipiebox.cpp  recipiebox.h  recipiebox.ui  recipiewindow.cpp  recipiewindow.ui  searchwindow.cpp  searchwindow.ui  startwindow.cpp  startwindow.h
QTprojUI/build-UI-Qt6-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  project
QTprojUI/build-UI-Qt6-Debug/.qt/: QtDeploySupport.cmake
QTprojUI/build-UI-Qt6-Debug/project_autogen/: deps  mocs_compilation.cpp
QTprojUI/build-UI-Qt6-Debug/project_autogen/EWIEGA46WW/: moc_homepage.cpp  moc_homepage.cpp.d  moc_startwindow.cpp  moc_startwindow.cpp.d
QTprojUI/build-UI-Qt6-Debug/project_autogen/include/: ui_homepage.h  ui_startwindow.h
UI/: account.h  accountwindow.cpp  accountwindow.ui  homewindow.ui  main.cpp  processes.cpp  processes.h  recipie.cpp  recipie.h  recipiebox.h  recipiebox.ui  recipiewindow.h  searchwindow.cpp  searchwindow.h  startwindow.ui
headerFiles/: account.h  collection.h  fileManager.h  objectNotFoundExeption.h  options.h  printable.h  processes.h  recipie.h  system.h  tag.h
sourceFiles/: account.cpp  collection.cpp  fileManager.cpp  main.cpp  printable.h  processes.cpp  recipie.cpp  system.cpp  tag.cpp
(+16 files in other folders)
